add consumer